# AmeliaSWIM

./: .gitignore  KBOS.yaml  KBOS_output.yaml  README.md  download_raw.py  environment.yml  generate_yaml.py  out_data  outputs  process.py  process_parrallel.py  pyproject.toml  readme.md  requirements.txt  setup.py  test.py
amelia_swim/: download_raw.py  process.py  txt2csv.py  yaml2csv.py
conf/: config.yaml
conf/airports/: katl.yaml  kaus.yaml  kbdl.yaml  kbfi.yaml  kbna.yaml  kbos.yaml  kbwi.yaml  kcle.yaml  kclt.yaml  kcvg.yaml  kdab.yaml  kdal.yaml  kdca.yaml  kdca_2.yaml  kdca_outer.yaml  kden.yaml  kdfw.yaml  kdtw.yaml  kewr.yaml  kfll.yaml  khou.yaml  khwd.yaml  kiad.yaml  kiah.yaml  kjfk.yaml  klas.yaml  klax.yaml  klga.yaml  kmci.yaml  kmco.yaml  kmdw.yaml  kmem.yaml  kmia.yaml  kmke.yaml  kmsp.yaml  kmsy.yaml  koak.yaml  kord.yaml  korl.yaml  kpdx.yaml  (+17 more)
conf/data/: aug.yaml  base.yaml  default.yaml  feb.yaml  jan.yaml  nov.yaml  oct.yaml  sep.yaml  week.yaml
conf/fences/: katl.csv  katl_paths.gpkg  katl_polygon.gpkg  katl_polygon.gpkg-shm  katl_polygon.gpkg-wal  kbdl.csv  kbos.csv  kbwi.csv  kcle.csv  kctl.csv  kcvg.csv  kdca.csv  kden.csv  kdfw.csv  kdtw.csv  kewr.csv  kfll.csv  khou.csv  khwd.csv  kiad.csv  kiah.csv  klas.csv  klga.csv  kmci.csv  kmco.csv  kmdw.csv  kmem.csv  kmia.csv  kmke.csv  kmsp.csv  kmsy.csv  kord.csv  kpdx.csv  kphl.csv  kpit.csv  ksea.csv  maps.qgz
conf/qgist/: katl.osm  (+129 more)
scripts/: compare_csvs.py  fuse_connection.cfg  gen_split.py  gen_unix_stamps.py  load_azure.bash  run.sbatch  run_all.sh  run_all_slurm.sh  run_pair.sbatch
(+300 files in other folders)
