[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amelia_swim"
version = "1.0.0"
description = "Tools for Amelia dataset analysis."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9, <4.0"
dependencies = [
    'setuptools',
    'tqdm==4.65.0',
    'minio==7.2.7',
    'numpy==1.21.2',
    'pykml',
    'easydict==1.10',
    'pandas==2.0.3',
    'hydra-core==1.3.2',
    'hydra_colorlog==1.2.0',
    'geographiclib==2.0',
    'joblib==1.2.0',
    'shapely==2.0.3',
    'python-dateutil==2.9.0',
]

authors = [
    {name = "Ingrid Navarro"},
    {name = "Pablo Ortega"},
    {name = "Jay Patrikar"},
    {name = "Haichuan Wang"},
    {name = "Jong Hoon Park"},
]

[tool.setuptools]
packages = ["amelia_swim"]

[project.urls]
Repository = "https://github.com/AmeliaCMU/AmeliaSWIM"
Homepage = "https://ameliacmu.github.io"